tests/NormalTests/paczka1/small_fuzzy/69405502.err
Error in line 12: HOgwDb S50- 138,3
Error in line 9: ds9eq S504 45,5
Error in line 11: yfbV0t S504 28,8
